--- a/app/src/main/res/layout/activity_location_peta_picker.xml
+++ b/app/src/main/res/layout/activity_location_peta_picker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,11 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".modules.LocationPicker_Activity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
         <fragment
             android:id="@+id/map"
@@ -22,11 +20,13 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnPilih"
+        android:id="@+id/btn_get_location"
         android:background="@drawable/btn_rounded_accent"
         android:textColor="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="chooseLocation"
-        android:text="@string/select_location" />
-</LinearLayout>
+        android:text="@string/select_location"
+        android:layout_gravity="bottom|center"/>
+
+</FrameLayout>
