--- a/app/src/main/res/layout/activity_detail_kontrol_layanan_.xml
+++ b/app/src/main/res/layout/activity_detail_kontrol_layanan_.xml
@@ -405,7 +405,6 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1">
 
@@ -477,39 +476,76 @@
                 android:text="@string/tidak_menunggu_uppercase" />
 
             <LinearLayout
+                android:id="@+id/ly_waktuAmbil"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/paddingSemiLarge"
-                android:gravity="center">
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="@dimen/paddingMedium"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/img_btn_waktu_ambil"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:srcCompat="@drawable/icon_jam"
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:backgroundTint="@android:color/white"
-                    android:layout_marginEnd="@dimen/paddingSemiLarge"
-                    tools:ignore="ContentDescription" />
+                    android:layout_weight="3"
+                    android:text="@string/waktu_ambil_antar_uppercase"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
 
-                    <EditText
-                        android:id="@+id/et_pengambilan"
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:id="@+id/tv_tgl_ambil"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:hint="@string/pengambilan_uppercase"
-                        android:inputType="numberDecimal"
-                        android:textSize="14sp"
-                        tools:ignore="Autofill" />
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="3dp"
+                        android:gravity="center"
+                        android:textAlignment="center"
+                        android:drawablePadding="10dp"
+                        android:layout_marginBottom="3dp"
+                        android:textColor="@color/grey_900"
+                        android:drawableStart="@drawable/icon_tanggal" />
 
-                </android.support.design.widget.TextInputLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:drawablePadding="5dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/grey_900"
+                        android:layout_marginEnd="10dp"
+                        android:text="-" />
 
+                    <TextView
+                        android:id="@+id/tv_jam_ambil"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:drawablePadding="10dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="3dp"
+                        android:gravity="center"
+                        android:layout_marginEnd="5dp"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_900"
+                        android:layout_marginBottom="3dp"
+                        android:drawableEnd="@drawable/icon_jam" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
