--- a/app/src/main/res/layout/item_invoice_piutang.xml
+++ b/app/src/main/res/layout/item_invoice_piutang.xml
@@ -10,98 +10,93 @@
     android:layout_marginTop="4dp"
     android:layout_marginRight="7dp"
     android:layout_marginBottom="4dp"
-    android:layout_weight="5"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="2dp">
+    android:padding="10dp"
+    app:cardElevation="2dp"
+    app:cardCornerRadius="10dp">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageButton
-            android:id="@+id/img_delete"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@android:color/transparent"
-            android:tint="@color/grey_80"
-            app:srcCompat="@drawable/ic_close"
+            android:id="@+id/img_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:tint="@android:color/black"
+            android:layout_marginTop="@dimen/spacing_medium"
             android:layout_gravity="end"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="5dp"/>
+            app:srcCompat="@drawable/ic_more_vert"
+            card_view:ignore="ContentDescription" />
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:padding="20dp"
-            android:layout_marginTop="10dp"
-            android:stretchColumns="*">
+            android:padding="15dp"
+            android:stretchColumns="*"
+            card_view:ignore="UselessParent">
 
             <TableRow>
 
                 <TextView
-                    android:id="@+id/tv_merk_detailTerimaPart"
+                    android:id="@+id/tv_nama_terhutang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:text="Merk"
+                    android:text="Nama Terhutang"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textSize="12sp" />
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:layout_gravity="start"/>
+
+            </TableRow>
+
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
                 <TextView
-                    android:id="@+id/tv_jumlah_detailTerimaPart"
+                    android:id="@+id/tv_nominal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:text="Jumlah"
+                    android:text="@string/nominal"
+                    android:layout_gravity="start"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900"
                     android:textSize="12sp"/>
 
-            </TableRow>
-
-            <TableRow android:layout_marginTop="5dp">
-
                 <TextView
-                    android:id="@+id/tv_namaPart_detailTerimaPart"
+                    android:id="@+id/tv_jatuh_tempo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:text="Nama Part"
+                    android:text="@string/jatuh_tempo"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_lokasi_detailTerimaPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:text="Lokasi"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textSize="12sp" />
-
-
-            </TableRow>
-
-            <TableRow android:layout_marginTop="5dp">
-
-                <TextView
-                    android:id="@+id/tv_noPart_detailTerimaPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start"
-                    android:text="No. Part"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_folder_detailTerimaPart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:text="Folder"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900"
                     android:textSize="12sp"
-                    android:layout_marginEnd="20dp"/>
+                    android:layout_gravity="end"/>
+
+
+            </TableRow>
+
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
+
+                <TextView
+                    android:id="@+id/tv_no_invoice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_invoice"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:layout_gravity="start"/>
+
+                <TextView
+                    android:id="@+id/tv_tgl_invoice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tanggal_invoice"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:layout_gravity="end"/>
 
             </TableRow>
 
