--- a/app/src/main/res/layout/activity_atur_schedule.xml
+++ b/app/src/main/res/layout/activity_atur_schedule.xml
@@ -105,6 +105,7 @@
                             android:layout_height="match_parent"
                             android:textAlignment="center"
                             android:textSize="12sp"
+                            android:focusable="true"
                             android:entries="@array/atur_status" />
 
                     </RelativeLayout>
@@ -112,105 +113,50 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ly_waktuAmbil"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/paddingXXSmall"
-                    android:layout_marginBottom="@dimen/paddingXXSmall"
+                    android:layout_marginTop="@dimen/paddingMedium"
+                    android:layout_marginBottom="@dimen/paddingMedium"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:paddingStart="@dimen/paddingMedium"
                     android:paddingEnd="@dimen/paddingMedium">
 
                     <TextView
-                        android:id="@+id/textView7"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_weight="3"
-                        android:textSize="12sp"
-                        android:text="TANGGAL"
+                        android:text="@string/tanggal_uppercase"
                         android:textColor="@color/grey_900"
+                        android:textSize="12sp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="6">
+                        android:layout_height="34dp"
+                        android:layout_weight="6"
+                        android:background="@drawable/background_edittext">
 
-                        <LinearLayout
-                            android:id="@+id/ly_tanggal"
+                        <TextView
+                            android:id="@+id/tv_tanggal_schedule"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="@dimen/paddingMedium"
-                            tools:ignore="UselessParent">
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="3dp"
+                            android:gravity="center"
+                            android:textAlignment="center"
+                            android:drawablePadding="10dp"
+                            android:layout_marginBottom="3dp"
+                            android:textColor="@color/grey_900"
+                            android:drawableStart="@drawable/icon_tanggal" />
 
-                            <TextView
-                                android:id="@+id/ic_tanggal"
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:drawableStart="@drawable/icon_tanggal"
-                                android:textStyle="bold" />
+                    </RelativeLayout>
 
-                            <TextView
-                                android:id="@+id/ic_tanggal2"
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginStart="10dp"
-                                android:drawableEnd="@drawable/icon_tanggal"
-                                android:textStyle="bold"
-                                android:enabled="false"/>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/background_edittext"
-                            android:orientation="horizontal"
-                            android:padding="@dimen/paddingMedium">
-
-                            <TextView
-                                android:id="@+id/tv_tanggal"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_weight="4"
-                                android:gravity="center"
-                                android:textColor="@color/grey_900"
-                                android:textSize="12sp"
-                                android:hint="@string/dd_mm_yy_uppercase"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_marginLeft="3dp"
-                                android:layout_marginRight="3dp"
-                                android:text="-"
-                                android:textSize="12sp" />
-
-                            <TextView
-                                android:id="@+id/tv_tanggal2"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_weight="4"
-                                android:gravity="center"
-                                android:textColor="@color/grey_900"
-                                android:textSize="12sp"
-                                android:hint="@string/dd_mm_yy_uppercase"
-                                android:textStyle="bold"
-                                android:enabled="false"/>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
