--- a/app/src/main/res/layout/activity_kontrol_layanan.xml
+++ b/app/src/main/res/layout/activity_kontrol_layanan.xml
@@ -28,12 +28,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/box_shadow"
-            tools:ignore="UselessParent">
+            tools:ignore="UselessParent"
+            android:padding="2dp">
 
             <Button
                 android:id="@+id/btn_filter"
                 android:layout_width="100dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:text="@string/filter_uppercase"
                 android:drawablePadding="10dp"
                 android:textSize="12sp"
