--- a/app/src/main/res/drawable/ic_keluhan_resize.xml
+++ b/app/src/main/res/drawable/ic_keluhan_resize.xml
@@ -3,6 +3,7 @@
 
     <item
         android:drawable="@drawable/ic_keluhan"
+        android:state_selected="true"
         android:width="40dp"
         android:height="40dp" />
 
