--- a/app/src/main/res/layout/activity_atur_schedule.xml
+++ b/app/src/main/res/layout/activity_atur_schedule.xml
@@ -1,46 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
-    tools:context=".MainActivity">
+    android:focusableInTouchMode="true">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <include layout="@layout/toolbar" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <include layout="@layout/toolbar" />
-
-        </android.support.design.widget.AppBarLayout>
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/layout_penugasan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/paddingMedium"
                     android:layout_marginBottom="@dimen/paddingMedium"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -54,7 +50,7 @@
                         android:layout_weight="3"
                         android:textColor="@color/grey_900"
                         android:textStyle="bold"
-                        android:textSize="12sp"/>
+                        android:textSize="12sp" />
 
                     <RelativeLayout
                         android:layout_width="0dp"
@@ -190,7 +186,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textAlignment="center"
-                            android:textSize="12sp"/>
+                            android:textSize="12sp" />
 
                     </RelativeLayout>
 
@@ -236,8 +232,7 @@
                             android:hint="MULAI"
                             android:textColor="@color/grey_900"
                             android:textSize="12sp"
-                            android:textStyle="bold"
-                           />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -258,10 +253,9 @@
                             android:hint="SELESAI"
                             android:textColor="@color/grey_900"
                             android:textSize="12sp"
-                            android:textStyle="bold"     />
+                            android:textStyle="bold" />
 
                     </LinearLayout>
-
 
 
                 </LinearLayout>
@@ -295,7 +289,7 @@
                             android:layout_height="match_parent"
                             android:text="COPY KE BULAN BERIKUTNYA"
                             android:enabled="false"
-                            android:textSize="12sp"/>
+                            android:textSize="12sp" />
 
                     </LinearLayout>
 
@@ -313,27 +307,19 @@
 
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="10dp">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recyclerViewSchedule"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="vertical"
-                    android:scrollingCache="true"
-                    android:layoutAnimation="@anim/layout_animation"
-                    android:layout_marginTop="10dp" />
+                <include layout="@layout/item_recyeler_view" />
 
             </LinearLayout>
 
-
-
-
         </LinearLayout>
 
-    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
