--- a/app/src/main/res/layout/item_absensi.xml
+++ b/app/src/main/res/layout/item_absensi.xml
@@ -69,6 +69,20 @@
 
         </TableRow>
 
+        <TableRow android:layout_marginTop="7dp">
+
+            <TextView
+                android:id="@+id/tv_lokasi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lokasi"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
+
+        </TableRow>
+
+
     </TableLayout>
 
 </android.support.v7.widget.CardView>
